--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl extension Recurring-Process
 
 {{$NEXT}}
+    - work on windows OS
 
 0.1.1 2016-10-06T15:13:27Z
     - fix win32 helper
